apps/Wordpress-on-EFS/deploy/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps-wordpress-efs
  labels:
    kubernetes.io/metadata.name: apps-wordpress-efs
