apps/Wordpress-on-EFS/deploy/kustomize/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "wordpress-efs"
  namespace: "apps-wordpress-efs"
  labels:
    app.kubernetes.io/name: "wordpress-efs"
    app.kubernetes.io/instance: "wordpress-efs"
    app.kubernetes.io/managed-by: "argocd"
    app.kubernetes.io/version: "6.5.2"
    platform.goldenpath.dev/team: "platform"
    platform.goldenpath.dev/env: "dev"
    platform.goldenpath.dev/build-id: "dev-0000"
spec:
  serviceName: "wordpress-efs"
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: "wordpress-efs"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "wordpress-efs"
        app.kubernetes.io/instance: "wordpress-efs"
        app.kubernetes.io/version: "6.5.2"
        platform.goldenpath.dev/team: "platform"
        platform.goldenpath.dev/env: "dev"
        platform.goldenpath.dev/build-id: "dev-0000"
    spec:
      serviceAccountName: "wordpress-efs"
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: "wordpress-efs"
          image: "wordpress:6.5.2-apache"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: "gp3"
        resources:
          requests:
            storage: "10Gi"
