apps/Wordpress-on-EFS/deploy/kustomize/base/networkpolicy.yaml
# Managed by scripts/standardize_metadata.py
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wordpress-efs-default
  namespace: apps-wordpress-efs
  annotations:
    goldenpath.idp/id: APPS_BASE_METADATA
    goldenpath.idp/owner: None
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: wordpress-efs
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kong-system
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
